2005-01-21  JP Rosevear  <jpr@novell.com>

	Fixes #46404	
	
	* gui/widgets/e-addressbook-view.c (eab_view_print): just show the
	dialog, not show all (margin settings aren't supposed to be used);
	use e_print to get the dialog
	(eab_view_print_preview): use e_print config for previewing

	* printing/e-contact-print.c (e_contact_print_preview): get the
	e_print config for previewing
	(e_contact_print_contact_dialog_new): use e_print to get the
	print dialog

	* printing/e-contact-print-envelope.c
	(e_contact_print_envelope_dialog_new): use e_print to get the
	print dialog

2005-01-21  Hans Petter Jansson  <hpj@novell.com>

	* gui/contact-editor/e-contact-quick-add.c (quick_add_set_name)
	(quick_add_set_email): Don't set properties on the contact immediately.
	(clicked_cb): Set the properties on the contact immediately before
	passing it on. This way, the FULL_NAME will only be set once, and so
	the FILE_AS field will be updated here.

2005-01-21 Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/component/addressbook-config.c 
	(eabc_commit) : in case of new book
	set the uid of the source as the relative 
	uri. 

2005-01-19  Hao Sheng <hao.sheng@sun.com>

	* gui/contact-editor/contact-editor.glade:
	add accessable key to the contact editor UI.
	* gui/contact-list-editor/contact-list-editor.glade:
	add accessable key to the contact list editor UI.

2005-01-18  Hao Sheng <hao.sheng@sun.com>

	* gui/component/addressbook-view.c:
	(addressbook_view_init): add a11y name for the contact's
	treeview.

2005-01-18 Hao Sheng <hao.sheng@sun.com>

	* gui/contact-editor/contact-editor.glade:
	add a11y names for widgets named "Image","Anniversary" and "Birthday".
	* gui/contact-editor/e-contact-editor.c:
	(e_contact_editor_create_date): add string1 as entry's a11y name.

2005-01-17 Sivaiah Nallagatla <snallagatla@novell.com>

	* gui/contact-editor/e-contact-editor.c 
	(fill_in_email_record) : show "other" when email 
	does not carry "TYPE"
	(fill_in_email) : pass deafult email 